--- a/config.env
+++ b/config.env
@@ -1,2 +1,3 @@
 PORT=4000
 MONGODB=mongodb+srv://anshika:parkjimin056@cluster0.8x5yw.mongodb.net/Insta-like?retryWrites=true&w=majority
+SECRET_KEY=MYNAMEISANSHIKASURAJMADANILOVECOMPUTERS
